@@ -1,5 +1,8 @@
 2009-02-10  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* eventcounter.cc, eventsource.cc, eventgenerator: Added option
+	--maxbuffered.
+
 	* music.cc (getRank): Added code to support newer (1.3.x) versions
 	of OpenMPI.
 
